# starfield-auto-start

./: .gitignore  CMakeLists.txt  README.md  build-linux-to-windows.sh  copy-dll.sh
.github/workflows/: publishRelease.yml
build-mingw/: Makefile
cmake/: mingw-w64-x86_64.cmake  windows-clangcl.cmake
src/: main.cpp
